# typereg

./: LICENSE  README.md  example.py  pyproject.toml
src/typereg/: __init__.py  base.py  dataclasses.py  pydantic.py  registry.py  typereg.py  utils.py
tests/: test_typereg.py
